add frames for easy dev

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       referrerpolicy="no-referrer"
     />
 
+    <!-- css -->
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+
     <!-- custom css -->
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
@@ -22,15 +25,15 @@
     <main>
       <section class="order">
         <section class="recap">
-          <section class="breadcrumb">
+          <div class="breadcrumb">
             <p>Home > Order Form</p>
-          </section>
-          <section class="title">
+          </div>
+          <div class="title">
             <h2>Order Form</h2>
-          </section>
-          <section class="help">
+          </div>
+          <div class="helper">
             <p>Please review orders information below...</p>
-          </section>
+          </div>
         </section>
         <section class="input">
           <section class="filters">
@@ -92,7 +95,7 @@
               </select>
             </div>
             <div class="report-menu">
-              <select name="" id="">
+              <select name="" id=""> 
                 <option value="">Report A</option>
               </select>
             </div>
@@ -127,30 +130,30 @@
             <div class="left">
               <div class="ship-input">
                 <form>
-                    <div class="input-ship-name">
-                        <label for="">Ship Name</label>
-                        <input type="text">
-                    </div>
-                    <div class="input-ship-via">
-                        <label for="">Ship Via</label>
-                        <input type="text">
-                    </div>
+                  <div class="input-ship-name">
+                    <label for="">Ship Name</label>
+                    <input type="text" />
+                  </div>
+                  <div class="input-ship-via">
+                    <label for="">Ship Via</label>
+                    <input type="text" />
+                  </div>
                 </form>
               </div>
             </div>
             <div class="right">
               <div class="totals">
                 <div class="subtotal">
-                    <span>Subtotal: </span>
-                    <span>$792</span>
+                  <span>Subtotal: </span>
+                  <span>$792</span>
                 </div>
                 <div class="freight">
-                    <span>Freight:</span>
-                    <span>$38</span>
+                  <span>Freight:</span>
+                  <span>$38</span>
                 </div>
                 <div class="total">
-                    <span>Total:</span>
-                    <span>$831</span>
+                  <span>Total:</span>
+                  <span>$831</span>
                 </div>
               </div>
             </div>
