--- a/index.html
+++ b/index.html
@@ -36,20 +36,24 @@
           </div>
         </section>
         <section class="input">
-          <section class="filters">
-            <div class="choose-record">
-              <select name="" id="">
-                <option value="">Record</option>
-              </select>
+          <div class="filters">
+            <div class="left">
+              <div class="choose-record">
+                <select name="" id="">
+                  <option value="">Record</option>
+                </select>
+              </div>
             </div>
-            <div class="view-by">
-              <span>View: </span>
-              <select name="" id="">
-                <option value="">Review Orders</option>
-              </select>
+            <div class="right">
+              <div class="view-by">
+                <span>View: </span>
+                <select name="" id="">
+                  <option value="">Review Orders</option>
+                </select>
+              </div>
             </div>
-          </section>
-          <section class="actions">
+          </div>
+          <div class="actions">
             <div class="left">
               <div class="required-info">
                 <p>..indicates a required field</p>
@@ -62,7 +66,7 @@
                 <button>Cancel</button>
               </div>
             </div>
-          </section>
+          </div>
           <section class="form">
             <form>
               <div class="left">
@@ -81,8 +85,8 @@
           </section>
         </section>
         <section class="output">
-          <section class="filters">
-            <div class="choose-1"></div>
+          <div class="filters">
+            <div class="choose-1">v</div>
             <div class="quick-find">
               <input type="text" />
             </div>
@@ -95,13 +99,13 @@
               </select>
             </div>
             <div class="report-menu">
-              <select name="" id=""> 
+              <select name="" id="">
                 <option value="">Report A</option>
               </select>
             </div>
-          </section>
-          <section class="table">
-            <table>
+          </div>
+          <div class="tables">
+            <table class="items">
               <thead>
                 <tr>
                   <th>Product Name</th>
@@ -123,10 +127,29 @@
                   <td>Grandma Kelly's Homestead</td>
                   <td>$375.00</td>
                 </tr>
+                <tr>
+                  <td>Tofu</td>
+                  <td>$23.25</td>
+                  <td>20</td>
+                  <td>25.00%</td>
+                  <td>Produce</td>
+                  <td>Mayumi's</td>
+                  <td>$348.75</td>
+                </tr>
               </tbody>
             </table>
-          </section>
-          <section class="totals-and-ship">
+            <table class="calc">
+              <tbody>
+                <tr>
+                  <td>AVG</td>
+                  <td>$25</td>
+                  <td>Sum: 50</td>
+                  <td>$792</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="totals-and-ship">
             <div class="left">
               <div class="ship-input">
                 <form>
@@ -157,8 +180,8 @@
                 </div>
               </div>
             </div>
-          </section>
-          <section class="actions">
+          </div>
+          <div class="actions">
             <div class="left">
               <div class="required-info">
                 <p>.. indicates a required field</p>
@@ -171,7 +194,7 @@
                 <button>Cancel</button>
               </div>
             </div>
-          </section>
+          </div>
         </section>
       </section>
     </main>
