--- a/1/index.html
+++ b/1/index.html
@@ -31,7 +31,7 @@
       <section class="order">
         <section class="recap">
           <div class="breadcrumb">
-            <p>Home > Order Form</p>
+            <p><span class="breadcrumb-other-page">Home</span> > <span class="breadcrumb-this-page">Order Form</span></p>
           </div>
           <div class="title">
             <h2>Order Form</h2>
@@ -61,14 +61,14 @@
           <div class="actions">
             <div class="left">
               <div class="required-info">
-                <p>..indicates a required field</p>
+                <p><i class="fas fa-arrow-up"></i> <i class="fas fa-arrow-down"></i> * - indicates a required field</p>
               </div>
             </div>
             <div class="right">
               <div class="buttons">
-                <button>OK</button>
-                <button>Delete</button>
-                <button>Cancel</button>
+                <button class="clickable">OK</button>
+                <button class="clickable">Delete</button>
+                <button class="clickable">Cancel</button>
               </div>
             </div>
           </div>
@@ -92,12 +92,13 @@
         <section class="output">
           <div class="filters-and-tables">
             <div class="filters">
-              <div class="choose-1">v</div>
+              <div class="choose-1 clickable"><i class="fas fa-chevron-down"></i></div>
               <div class="quick-find">
                 <input type="text" />
+                <span class="icon"><i class="fas fa-search"></i></span>
               </div>
               <div class="add-order">
-                <button>New Order Details</button>
+                <button class="clickable">New Order Details</button>
               </div>
               <div class="actions-menu">
                 <select name="" id="">
@@ -201,14 +202,14 @@
           <div class="actions">
             <div class="left">
               <div class="required-info">
-                <p>.. indicates a required field</p>
+                <p><i class="fas fa-arrow-up"></i> <i class="fas fa-arrow-down"></i> * - indicates a required field</p>
               </div>
             </div>
             <div class="right">
               <div class="buttons">
-                <button>OK</button>
-                <button>Delete</button>
-                <button>Cancel</button>
+                <button class="clickable">OK</button>
+                <button class="clickable">Delete</button>
+                <button class="clickable">Cancel</button>
               </div>
             </div>
           </div>
