--- a/1/index.html
+++ b/1/index.html
@@ -26,7 +26,16 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <!-- <div class="company"></div>
+      <nav>
+        <ol>
+          <li><a href="#">Bikes</a></li>
+          <li><a href="#">BMX</a></li>
+          <li>Jump Bike 3000</li>
+        </ol>
+      </nav> -->
+    </header>
     <main>
       <section class="order">
         <section class="recap">
@@ -37,7 +46,7 @@
             <h2>Order Form</h2>
           </div>
           <div class="helper">
-            <p>Please review orders information below...</p>
+            <p>Please review orders information below.</p>
           </div>
         </section>
         <section class="input">
@@ -79,10 +88,42 @@
                   <label for="">Customer:</label>
                   <input type="text" />
                 </div>
+                <div class="input-employee">
+                  <label for="">Employee:</label>
+                  <input type="text" />
+                </div>
+                <div class="input-order-date">
+                  <label for="">Order Date:</label>
+                  <input type="text" />
+                </div>
+                <div class="input-required-data">
+                  <label for="">Required Date:</label>
+                  <input type="text" />
+                </div>
+                <div class="input-shipped-date">
+                  <label for="">Shipped Date:</label>
+                  <input type="text" />
+                </div>
               </div>
               <div class="right">
                 <div class="input-address">
                   <label for="">Address:</label>
+                  <input type="text" />
+                </div>
+                <div class="input-city">
+                  <label for="">City:</label>
+                  <input type="text" />
+                </div>
+                <div class="input-region">
+                  <label for="">Region:</label>
+                  <input type="text" />
+                </div>
+                <div class="input-region">
+                  <label for="">Region:</label>
+                  <input type="text" />
+                </div>
+                <div class="input-ship-country">
+                  <label for="">Ship Country:</label>
                   <input type="text" />
                 </div>
               </div>
@@ -94,7 +135,7 @@
             <div class="filters">
               <div class="choose-1 clickable"><i class="fas fa-chevron-down"></i></div>
               <div class="quick-find">
-                <input type="text" />
+                <input class="default-input" type="text" placeholder="Quick Find" />
                 <span class="icon"><i class="fas fa-search"></i></span>
               </div>
               <div class="add-order">
@@ -169,7 +210,7 @@
           </div>
           <div class="totals-and-ship">
             <div class="left">
-              <div class="ship-input">
+              <div class="ship-inputs">
                 <form>
                   <div class="input-ship-name">
                     <label for="">Ship Name</label>
@@ -190,7 +231,7 @@
                 </div>
                 <div class="freight">
                   <span>Freight:</span>
-                  <span>$38</span>
+                  <span> <input type="text" value="$38" /> </span>
                 </div>
                 <div class="total">
                   <span>Total:</span>
