--- a/9/index.html
+++ b/9/index.html
@@ -59,15 +59,55 @@
           </div>
         </div>
         <div class="main layout2">
-          <div class="title layout3">title</div>
+          <div class="title layout3">Home Dashboard</div>
           <div class="content layout3">
-            <div class="box-container1 layout3">
-              <div class="box1 layout4">box container 1: window 1</div>
-              <div class="box2 layout4">box container 1: window 2</div>
+            <div class="box-container box-container1 layout3">
+              <div class="box box1 layout4">
+                <div class="head layout5">
+                  <div class="title">Calendar</div>
+                  <div class="settings layout6">
+                    <div class="open">Opz 1</div>
+                    <div class="add">Opz 2</div>
+                    <div class="remove">Opz 3</div>
+                  </div>
+                </div>
+                <div class="body layout5"></div>
+              </div>
+              <div class="box box2 layout4">
+                <div class="head layout5">
+                  <div class="title">My inbox: unread emails</div>
+                  <div class="settings layout6">
+                    <div class="open">Opz 1</div>
+                    <div class="add">Opz 2</div>
+                    <div class="remove">Opz 3</div>
+                  </div>
+                </div>
+                <div class="body layout5"></div>
+              </div>
             </div>
-            <div class="box-container2 layout3">
-              <div class="box1 layout4">box container 2: window 1</div>
-              <div class="box2 layout4">box container 2: window 2</div>
+            <div class="box-container box-container2 layout3">
+              <div class="box box1 layout4">
+                <div class="head layout5">
+                  <div class="title">opportunities funnel chart</div>
+                  <div class="settings layout6">
+                    <div class="open">Opz 1</div>
+                    <div class="add">Opz 2</div>
+                    <div class="remove">Opz 3</div>
+                  </div>
+                </div>
+                <div class="body layout5"></div>
+              </div>
+              <div class="box box2 layout4">
+                <div class="head layout5">
+                  <div class="title">world weather</div>
+                  <div class="settings layout6">
+                    <div class="open">Opz 1</div>
+                    <div class="add">Opz 2</div>
+                    <div class="remove">Opz 3</div>
+                  </div>
+                </div>
+                <div class="body layout5"></div>
+              </div>
             </div>
           </div>
         </div>
