--- a/9/index.html
+++ b/9/index.html
@@ -61,6 +61,7 @@
         <div class="main layout2">
           <div class="title layout3">Home Dashboard</div>
           <div class="content layout3">
+            
             <div class="box-container box-container1 layout3">
               <div class="box box1 layout4">
                 <div class="head layout5">
@@ -71,7 +72,9 @@
                     <div class="remove">Opz 3</div>
                   </div>
                 </div>
-                <div class="body layout5"></div>
+                <div class="body layout5">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quasi in repudiandae? Repudiandae quasi reprehenderit facilis. Sit facilis voluptate cupiditate in aut! Veniam et officia numquam eveniet illo, id ipsum!</p>
+                </div>
               </div>
               <div class="box box2 layout4">
                 <div class="head layout5">
@@ -109,6 +112,7 @@
                 <div class="body layout5"></div>
               </div>
             </div>
+
           </div>
         </div>
       </div>
