--- a/9/index.html
+++ b/9/index.html
@@ -61,58 +61,98 @@
         <div class="main layout2">
           <div class="title layout3">Home Dashboard</div>
           <div class="content layout3">
-            
-            <div class="box-container box-container1 layout3">
-              <div class="box box1 layout4">
-                <div class="head layout5">
-                  <div class="title">Calendar</div>
-                  <div class="settings layout6">
-                    <div class="open">Opz 1</div>
-                    <div class="add">Opz 2</div>
-                    <div class="remove">Opz 3</div>
-                  </div>
-                </div>
-                <div class="body layout5">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quasi in repudiandae? Repudiandae quasi reprehenderit facilis. Sit facilis voluptate cupiditate in aut! Veniam et officia numquam eveniet illo, id ipsum!</p>
+            <div class="box box1 layout4">
+              <div class="head layout5">
+                <div class="title">Calendar</div>
+                <div class="settings layout6">
+                  <div class="open">Opz 1</div>
+                  <div class="add">Opz 2</div>
+                  <div class="remove">Opz 3</div>
                 </div>
               </div>
-              <div class="box box2 layout4">
-                <div class="head layout5">
-                  <div class="title">My inbox: unread emails</div>
-                  <div class="settings layout6">
-                    <div class="open">Opz 1</div>
-                    <div class="add">Opz 2</div>
-                    <div class="remove">Opz 3</div>
-                  </div>
-                </div>
-                <div class="body layout5"></div>
+              <div class="body layout5">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat quasi in repudiandae? Repudiandae quasi reprehenderit facilis. Sit facilis
+                  voluptate cupiditate in aut! Veniam et officia numquam eveniet illo, id ipsum!
+                </p>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>col 1</th>
+                            <th>col 2</th>
+                            <th>col 3</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>val 1</td>
+                            <td>val 2</td>
+                            <td>val 3</td>
+                        </tr>
+                    </tbody>
+                </table>
               </div>
             </div>
-            <div class="box-container box-container2 layout3">
-              <div class="box box1 layout4">
-                <div class="head layout5">
-                  <div class="title">opportunities funnel chart</div>
-                  <div class="settings layout6">
-                    <div class="open">Opz 1</div>
-                    <div class="add">Opz 2</div>
-                    <div class="remove">Opz 3</div>
-                  </div>
+            <div class="box box2 layout4">
+              <div class="head layout5">
+                <div class="title">My inbox: unread emails</div>
+                <div class="settings layout6">
+                  <div class="open">Opz 1</div>
+                  <div class="add">Opz 2</div>
+                  <div class="remove">Opz 3</div>
                 </div>
-                <div class="body layout5"></div>
               </div>
-              <div class="box box2 layout4">
-                <div class="head layout5">
-                  <div class="title">world weather</div>
-                  <div class="settings layout6">
-                    <div class="open">Opz 1</div>
-                    <div class="add">Opz 2</div>
-                    <div class="remove">Opz 3</div>
-                  </div>
-                </div>
-                <div class="body layout5"></div>
+              <div class="body layout5">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus earum soluta officiis sequi nobis quibusdam, dolore, dolorum explicabo
+                  mollitia quisquam possimus aspernatur, obcaecati optio praesentium iste minima! Ut, at magnam. Commodi, totam? Reprehenderit eius, soluta
+                  voluptates a sit voluptas libero asperiores culpa quam mollitia et animi sint rerum tenetur. Distinctio nemo aut in, velit error eos? Corporis
+                  fuga velit dolorum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, mollitia debitis numquam saepe cupiditate autem sapiente
+                  sequi, natus maxime amet ipsum eum sunt nemo rerum? Eum dolores corrupti quidem cumque. Lorem ipsum dolor sit amet consectetur adipisicing
+                  elit. Voluptas culpa consequuntur omnis magni assumenda fugiat molestias fuga ipsum non magnam quae distinctio, iure, eveniet, ea ad! Maiores
+                  animi assumenda tenetur. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam quibusdam impedit nobis ipsum recusandae repellat,
+                  molestias reprehenderit eius aliquam ducimus? Illum nisi sunt enim eveniet vitae est libero repellendus reiciendis.
+                </p>
               </div>
             </div>
 
+            <div class="box box3 layout4">
+              <div class="head layout5">
+                <div class="title">opportunities funnel chart</div>
+                <div class="settings layout6">
+                  <div class="open">Opz 1</div>
+                  <div class="add">Opz 2</div>
+                  <div class="remove">Opz 3</div>
+                </div>
+              </div>
+              <div class="body layout5">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero cupiditate totam ut repellat sapiente, assumenda cum magni iusto neque, earum
+                  fuga tenetur ullam in iste praesentium quos impedit nemo reiciendis? Excepturi quo molestiae deserunt nulla, culpa magnam temporibus
+                  laudantium? Laborum libero molestiae quas atque architecto qui impedit optio placeat aliquid perspiciatis odio necessitatibus quaerat culpa
+                  similique quae, nisi quos repellendus! Quo, repudiandae quibusdam cum assumenda a alias aliquid exercitationem incidunt labore quidem placeat
+                  tempore harum perferendis aut autem totam eius natus esse voluptas possimus ratione minima dolorem maiores iure? Deserunt.
+                </p>
+              </div>
+            </div>
+            <div class="box box4 layout4">
+              <div class="head layout5">
+                <div class="title">world weather</div>
+                <div class="settings layout6">
+                  <div class="open">Opz 1</div>
+                  <div class="add">Opz 2</div>
+                  <div class="remove">Opz 3</div>
+                </div>
+              </div>
+              <div class="body layout5">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae doloribus iure quia excepturi est magnam quaerat consequatur, fugit, aspernatur
+                  placeat omnis quidem cumque dolores. Vitae ad quisquam odit temporibus voluptates. Sed exercitationem iste repudiandae hic omnis mollitia
+                  labore ipsum fugit vero ea. Possimus, quisquam iure dolor, voluptatibus doloremque rem magni labore accusamus repellendus quae soluta, culpa
+                  debitis quam nihil fugit!
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
