--- a/10/index.html
+++ b/10/index.html
@@ -6,7 +6,16 @@
     <title>Document</title>
   </head>
   <body>
-    <p id="paragraph"></p>
+
+    <h1>I più migliori detti dell'anno:</h1>
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <p id="p3"></p>
+    <p id="p4"></p>
+
+
+    <span><i>cit. Giuseppe Tavella</i></span>
+
     <script src="script.js"></script>
   </body>
 </html>
