--- a/10/index.html
+++ b/10/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
 
+    <p>Per vedere l'animazione, ricarica la pagina.</p>
+
     <h1>I più migliori detti dell'anno:</h1>
     <p id="p1"></p>
     <p id="p2"></p>
